# legalmind

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  main.py
.github/workflows/: ci.yml
backend/: .env.test  Dockerfile  README.md  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0bff4770f6b8_leg54_add_feedback_resolved_flag.py  126d6a6790ee_add_permissions_and_role_permission_.py  6e3f90abf518_align_user_model_with_leg_19_spec.py  782ff2e04c9e_create_initial_tables.py  a1b2c3d4e5f6_leg35_update_case_status_and_assignment_indexes.py  b2c3d4e5f6a7_leg38_expand_role_enum.py  b991939ce954_add_password_hash_and_session_table.py  c1d2e3f4a5b6_leg51_review_and_threaded_feedback.py  c47a5224069d_add_documents_table.py  dd761b9ccc7b_add_must_change_password_flag_and_seed_.py
backend/src/: main.py
backend/src/foundation/: __init__.py  case_state_machine.py  database.py  hashing.py  models.py  permissions.py  rate_limit.py  schemas.py  storage.py
backend/src/repositories/: assignment_repository.py  case_repository.py  document_repository.py  feedback_repository.py  review_repository.py  session_repository.py  user_repository.py
backend/src/routers/: auth_router.py  case_router.py  document_router.py  review_router.py  users_router.py
backend/src/services/: auth_service.py  case_service.py  document_service.py  review_service.py
backend/tests/: conftest.py  test_auth.py  test_authorization.py  test_case.py  test_case_crud_and_transitions.py  test_case_state_machine.py  test_document_upload_and_list.py  test_hashing.py  test_hello.py  test_review.py
frontend/: package-lock.json  package.json  rest_of_page.txt
frontend/app/: layout.tsx  page.tsx
frontend/app/admin/users/: page.tsx
frontend/app/cases/: page.tsx
frontend/app/cases/[id]/: page.tsx
frontend/app/cases/assign/: page.tsx
frontend/app/cases/new/: page.tsx
frontend/app/change-password/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: AppShell.tsx  CanDo.tsx  DocumentsSection.tsx  FeedbackThread.tsx  RequireAuth.tsx
frontend/components/ui/: EmptyState.tsx  ErrorState.tsx  Loading.tsx  NotAuthorized.tsx  index.ts
frontend/lib/: api-client.ts  auth.tsx  caseTransitions.ts  permissions.ts  usePermission.ts
frontend/types/: api.ts
