[project]
name = "backend"
version = "0.1.0"
description = "Backend service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.138.2",
    "psycopg[binary]>=3.3.4",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foundation", "src/routers", "src/services", "src/repositories"]

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["foundation"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy (type checking)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["foundation", "routers", "services", "repositories"]
strict = true
warn_unused_configs = true
warn_return_any = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=foundation --cov-report=term-missing"
